# esp32libfun

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md  sdkconfig.defaults
docs/: architecture.md  plugin-system.md  style-guide.md  vibe_coding.md
docs/examples/: esp32libfun_w5500_basic.cpp  esp32libfun_w5500_s3_dhcp.cpp  esp_bmp280_managed.cpp  esp_bmp280_manual.cpp  esp_component_template_managed.cpp  esp_component_template_manual.cpp  esp_si7021_managed.cpp  esp_si7021_manual.cpp  esp_ssd1306_dashboard.cpp  esp_ssd1306_quick_test.cpp  esp_st7789v2_dashboard.cpp  i2c_scanner.cpp
framework/components/esp32libfun/: Kconfig
framework/components/esp32libfun/include/: esp32libfun.hpp
framework/components/esp32libfun_at/: esp32libfun_at.cpp
framework/components/esp32libfun_at/include/: esp32libfun_at.hpp
framework/components/esp32libfun_delay/: CMakeLists.txt  esp32libfun_delay.cpp
framework/components/esp32libfun_delay/include/: esp32libfun_delay.hpp
framework/components/esp32libfun_gpio/: esp32libfun_gpio.cpp
framework/components/esp32libfun_i2c/include/: esp32libfun_i2c.hpp
framework/components/esp32libfun_runtime/: CMakeLists.txt  esp32libfun_runtime.cpp
framework/components/esp32libfun_runtime/include/: esp32libfun_runtime.hpp
framework/components/esp32libfun_serial/: CMakeLists.txt
framework/components/esp32libfun_webserver/: esp32libfun_webserver.cpp
framework/components/esp32libfun_webserver/include/: esp32libfun_webserver.hpp
framework/components/esp32libfun_wifi_sta/: esp32libfun_wifi_sta.cpp
framework/components/esp_pca9685/: esp_pca9685.cpp
framework/core/esp32libfun/: CMakeLists.txt  Kconfig  esp32libfun.cpp
framework/core/esp32libfun/include/: esp32libfun.hpp
framework/core/esp32libfun_at/: CMakeLists.txt
framework/core/esp32libfun_at/include/: esp32libfun_at.hpp
framework/core/esp32libfun_button/: CMakeLists.txt  esp32libfun_button.cpp
framework/core/esp32libfun_button/include/: esp32libfun_button.hpp
framework/core/esp32libfun_gpio/: CMakeLists.txt  esp32libfun_gpio.cpp
framework/core/esp32libfun_gpio/include/: esp32libfun_gpio.hpp
framework/core/esp32libfun_i2c/: CMakeLists.txt  esp32libfun_i2c.cpp
framework/core/esp32libfun_ledc/: CMakeLists.txt  esp32libfun_ledc.cpp
framework/core/esp32libfun_ledc/include/: esp32libfun_ledc.hpp
framework/core/esp32libfun_mcpwm/: CMakeLists.txt  esp32libfun_mcpwm.cpp
framework/core/esp32libfun_mcpwm/include/: esp32libfun_mcpwm.hpp
framework/core/esp32libfun_pcnt/: CMakeLists.txt  esp32libfun_pcnt.cpp
framework/core/esp32libfun_pcnt/include/: esp32libfun_pcnt.hpp
framework/core/esp32libfun_serial/: esp32libfun_serial.cpp
framework/core/esp32libfun_spi/: CMakeLists.txt  esp32libfun_spi.cpp
framework/core/esp32libfun_w5500/: CMakeLists.txt  README.md  esp32libfun_w5500.cpp  idf_component.yml
framework/core/esp32libfun_webserver/: CMakeLists.txt
framework/core/esp32libfun_wifi_sta/: CMakeLists.txt
framework/libs/esp_bmp280/: CMakeLists.txt  README.md  esp_bmp280.cpp
framework/libs/esp_button/: CMakeLists.txt  esp_button.cpp
framework/libs/esp_component_template/: CMakeLists.txt  README.md  esp_component_template.cpp
framework/libs/esp_pca9685/: CMakeLists.txt  esp_pca9685.cpp
framework/libs/esp_si7021/: CMakeLists.txt  README.md  esp_si7021.cpp
framework/libs/esp_ssd1306/: CMakeLists.txt  README.md  esp_ssd1306.cpp
framework/libs/esp_st7789v2/: CMakeLists.txt  README.md  esp_st7789v2.cpp
main/: CMakeLists.txt  main.cpp
(+11 files in other folders)
